--- a/app/globals.css
+++ b/app/globals.css
@@ -17,6 +17,10 @@
 }
 
 body {
+  width: 100%;
+}
+
+/* body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
@@ -24,4 +28,4 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-}
+} */
