--- a/components/vehicleDisplay/VehicleDisplay.module.scss
+++ b/components/vehicleDisplay/VehicleDisplay.module.scss
@@ -1,3 +1,14 @@
 .body {
-  background-color: white;
+  width: 100%;
+  padding: 64px;
+
+  img {
+    max-width: 800px;
+  }
+}
+
+@keyframes moveImage {
+  from {
+    transform: translateX()
+  }
 }
